2006-08-17  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.h, ext/oci8/bind.c, ext/oci8/stmt.c:
	    Use long instead of int to bind Fixnum.
	    http://rubyforge.org/forum/forum.php?thread_id=7955&forum_id=1078

2006-08-03  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb.in: add a workaround code on cygwin version.
	    Cygwin manages environment variables by itself. They don't
	    synchroize with Win32's ones. set some Oracle's environment
	    variables to win32.

2006-07-29  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oradate.c: add OraDate#dup, OraDate#clone, OraDate#_dump
	    and OraDate._load.
	* ext/oci8/oranumber.c: add OraNumber#dup, OraNumber#clone,
	    OraNumber#_dump and OraNumber._load.
	* test/test_oradate.rb: add tests for OraDate#dup, OraDate#clone,
	    OraDate#_dump and OraDate._load.
	* test/test_oranumber.rb: add tests for OraNumber#dup,
	    OraNumber#clone, OraNumber#_dump and OraNumber._load.
	* test/test_dbi.rb, test/test_oci8.rb, ext/oci8/oraconf.rb,
	  ext/oci8/extconf.rb, lib/oci8.rb.in, ext/oci8/ocinumber.c:
	    fix for ruby 1.6.

2006-07-21  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.h, ext/oci8/bind.c, ext/oci8/stmt.c, lib/oci8.rb.in:
	    Support LONG and LONG RAW longer than 65535 bytes.
	    Add OCI8#long_read_len and OCI8#long_read_len= to set max long
	    length.
	* ext/oci8/oraconf.rb: fix typo.

2006-07-20  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c, ext/oci8/env.c: move workaround code for
	    instant client environment variable problem from
	    ext/oci8/oci8.c to ext/oci8/env.c.
	* ext/oci8/oraconf.rb: check a c develop file when linux.
	* VERSION, Makefile, ext/oci8/extconf.rb: read version string from
	    the VERSION file.
	* lib/oci8.rb.in: use OCIEnv.create when it exists.

2006-04-23  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb: disable OCIServerRelease checking.
	    That's because mswin32 binary is for 8.1 or later, but 8.1.5
	    doesn't have OCIServerRelease.