@@ -293,6 +293,22 @@ static VALUE ora_date_trunc(VALUE self)
   return self;
 }
 
+static VALUE ora_date_hash(VALUE self)
+{
+  ora_date_t *od;
+  unsigned int v;
+
+  Data_Get_Struct(self, ora_date_t, od);
+  v = (od->century <<  8)
+    + (od->year    << 15)
+    + (od->month   << 22)
+    + (od->day     << 26)
+    + (od->hour    << 12)
+    + (od->minute  <<  6)
+    + (od->second  <<  0);
+  return INT2FIX(v);
+}
+
 /*
 =begin
 --- OraDate#<=>(other)
@@ -382,6 +398,8 @@ void Init_ora_date(void)
 
   rb_define_method(cOraDate, "<=>", ora_date_cmp, 1);
   rb_include_module(cOraDate, rb_mComparable);
+
+  rb_define_method(cOraDate, "hash", ora_date_hash, 0);
 
   rb_define_method(cOraDate, "_dump", ora_date_dump, -1);
   rb_define_singleton_method(cOraDate, "_load", ora_date_s_load, 1);
