@@ -8,7 +8,7 @@
 if RUBY_PLATFORM =~ /cygwin/
   # Cygwin manages environment variables by itself.
   # They don't synchroize with Win32's ones.
-  # This set some Oracle's environment variables to win32.
+  # This set some Oracle's environment variables to win32's enviroment.
   require 'Win32API'
   win32setenv = Win32API.new('Kernel32.dll', 'SetEnvironmentVariableA', 'PP', 'I')
   ['NLS_LANG', 'ORA_NLS10', 'ORA_NLS32', 'ORA_NLS33', 'ORACLE_BASE', 'ORACLE_HOME', 'ORACLE_SID', 'TNS_ADMIN', 'LOCAL'].each do |name|
@@ -991,6 +991,28 @@ class OraDate
   if defined? DateTime # ruby 1.8.0 or upper
     def to_datetime
       DateTime.new(year, month, day, hour, minute, second)
+    end
+  end
+
+  def yaml_initialize(type, val) # :nodoc:
+    initialize(*val.split(/[ -\/:]+/).collect do |i| i.to_i end)
+  end
+
+  def to_yaml(opts = {}) # :nodoc:
+    YAML.quick_emit(object_id, opts) do |out|
+      out.scalar(taguri, self.to_s, :plain)
+    end
+  end
+end
+
+class OraNumber
+  def yaml_initialize(type, val) # :nodoc:
+    initialize(val)
+  end
+
+  def to_yaml(opts = {}) # :nodoc:
+    YAML.quick_emit(object_id, opts) do |out|
+      out.scalar(taguri, self.to_s, :plain)
     end
   end
 end
