@@ -1,3 +1,9 @@
+2006-08-18  KUBO Takehiro  <kubo@jiubao.org>
+	* ext/oci8/oradate.c: add OraDate.hash().
+	* ext/oci8/oranumber.c: OraNumber.new() now accepts a String.
+	* lib/oci8.rb.in: add YAML support for OraDate and OraNumber.
+	* test/test_oranumber.rb: add testcases for OraNumber.new(aString).
+
 2006-08-17  KUBO Takehiro  <kubo@jiubao.org>
 	* ext/oci8/oci8.h, ext/oci8/bind.c, ext/oci8/stmt.c:
 	    Use long instead of int to bind Fixnum.
